Добавление head с информацией об игроке в меню